<resources>
    <string name="app_name">ParkStash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="book_a_spot">Book a Spot</string>
    <string name="list_a_spot">List a Spot</string>
    <string name="payments">Payments</string>
    <string name="promos">Promos</string>
    <string name="wallet">Wallet</string>
    <string name="my_profile">My Profile</string>
    <string name="ratings">Ratings</string>
    <string name="help">Help</string>
    <string name="legal">Legal</string>
    <string name="logout">Logout</string>
    <string name="google_mapkey">AIzaSyBdDYmgid5lAYs-4FeKuyQrHMQwz8HPenE</string>
    <string name="mar_23_4_00_pm_mar_23_5_00_pm">Mar 23,4:00 PM - Mar 23,5:00 PM</string>
    <string name="levi_s_stadium">Levi\'s Stadium</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="hello_sameer">Hello Sameer!</string>
    <string name="_5_0">5.0</string>
    <string name="google_place_api">AIzaSyB_O_uWz0Hn2ueHKG-dfFsfajR6Ar_LLpI</string>
</resources>
