<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/level1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/book_spot"
            android:icon="@drawable/book_128"
            android:title="@string/book_a_spot" />
        <item
            android:id="@+id/list_spot"
            android:icon="@drawable/house"
            android:title="@string/list_a_spot" />
        <item
            android:id="@+id/past_bookings"
            android:icon="@drawable/pastbooking_128"
            android:title="@string/past_bookings" />
    </group>

    <group
        android:id="@+id/level2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/payments"
            android:icon="@drawable/payment_128"
            android:title="@string/payments" />
        <item
            android:id="@+id/promos"
            android:icon="@drawable/promo_128"
            android:title="@string/promos" />
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/wallet_128"
            android:title="@string/wallet" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/profile_128"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/ratings"
            android:icon="@drawable/rating_128"
            android:title="@string/ratings" />
    </group>

    <group
        android:id="@+id/level3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/help"
            android:icon="@drawable/help_128"
            android:title="@string/help" />
        <item
            android:id="@+id/legal"
            android:icon="@drawable/legal_128"
            android:title="@string/legal" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_128"
            android:title="@string/logout" />
    </group>

</menu>
